@@ -169,6 +169,8 @@ Extension Modules
 Library
 -------
 
+- Patch 1463026: Support default namespace in XMLGenerator.
+
 - Patch 1571379: Make trace's --ignore-dir facility work in the face of
   relative directory names.
 
